<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Fragments.PropertyFragment">

    <!-- MEDIA TEXTVIEW-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media"/>

    <!-- LIST IMAGES PROPERTY -->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_images_property">
    </android.support.v7.widget.RecyclerView>

    <!-- DESCRIPTION TEXTVIEW-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"/>

    <!-- DESCRIPTION -->
    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- DESCRIPTION MODIF -->
    <EditText
        android:id="@+id/edittext_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_a_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </LinearLayout>

</android.support.constraint.ConstraintLayout>