<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Fragments.EditFragment"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- MEDIA TEXTVIEW-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/media"/>

    <!-- LIST IMAGES PROPERTY -->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/list_images_property_edit">
    </android.support.v7.widget.RecyclerView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <!-- OVERVIEW TEXTVIEW-->
        <TextView
            android:id="@+id/overview_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/overview"/>

        <!-- TOGGLE SOLD -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_text_sold"
            android:text="@string/sold"
            android:textAlignment="center"
            android:layout_alignBaseline="@id/overview_textview"
            android:layout_toStartOf="@id/switch_sold"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/switch_text_sold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <!-- TYPE PROPERTY -->
        <RelativeLayout
            android:id="@+id/type_property_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/text_type_properties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_property"/>

            <Spinner
                android:id="@+id/list_type_properties"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_alignBaseline="@id/text_type_properties"
                android:layout_alignParentEnd="true"
                android:gravity="center"

                android:entries="@array/type_property"
                android:prompt="@string/apartment"/>


        </RelativeLayout>

        <!-- PRICE PROPERTY -->
        <RelativeLayout
            android:id="@+id/price_property_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_property_layout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/price_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="end|center_vertical"
                android:background="@drawable/background_edittext"
                android:inputType="number"
                android:maxLength="15"
                android:maxLines="1"/>

        </RelativeLayout>

        <!-- DATES PROPERTY SELLING AND PUBLISHING -->
        <LinearLayout
            android:id="@+id/listview_dates"
            android:layout_below="@id/price_property_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:baselineAligned="false">

            <include
                android:id="@+id/publishing_date_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                layout="@layout/date_selector_publish"/>

            <include
                android:id="@+id/selling_date_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                layout="@layout/date_selector_sold"/>

        </LinearLayout>

        <CalendarView
            android:id="@+id/calendar"
            android:layout_below="@id/listview_dates"
            android:textColorPrimary="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">
        </CalendarView>

        <!--  LINE SEPARATOR  -->
        <View
            android:id="@+id/date_line_separator"
            android:layout_below="@id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#dfdfdf"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_below="@id/date_line_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/description"/>

        <!-- SURFACE PROPERTY -->
        <RelativeLayout
            android:id="@+id/surface_property_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/text_description">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_alignBaseline="@id/surface_edit_text"
                android:text="@string/surface" />

            <EditText
                android:id="@+id/surface_edit_text"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:gravity="end|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType = "number"
                android:background="@drawable/background_edittext"
                android:maxLength="7"
                android:maxLines="1"/>

        </RelativeLayout>

        <!-- NUMBER OF ROOMS -->
        <RelativeLayout
            android:id="@+id/nbrooms_property_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/surface_property_layout">

            <TextView
                android:id="@+id/nb_rooms_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/number_of_rooms" />

            <include
                android:id="@+id/room_number_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                layout="@layout/button_selection"/>

        </RelativeLayout>

        <!--  LINE SEPARATOR  -->
        <View
            android:id="@+id/descr_line_separator"
            android:layout_below="@id/nbrooms_property_layout"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#dfdfdf"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descr_line_separator"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_localization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/localization"/>

            <!-- ADDRESS-->
            <TextView
                android:id="@+id/address_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/address" />

            <android.support.v7.widget.SearchView
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:icon="@drawable/baseline_search_white_24"
                android:gravity="start|center_vertical"
                android:background="@drawable/background_edittext"
                android:maxLines="1"/>

            <!-- DESCRIPTION PROPERTY -->
            <TextView
                android:id="@+id/description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/short_description" />

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:gravity="start|top"
                android:maxLength="34"
                android:background="@drawable/background_edittext"
                android:inputType = "text|textMultiLine|textCapSentences"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toStartOf="@id/buttonSave"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/save"/>

    </RelativeLayout>


</LinearLayout>